# SENTRIX

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SENTRIX_PROJECT_INITIALIZATION.md  VESTRIX_PROJECT_INITIALIZATION.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: benchmark_report.md  bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
collector/: README.md  pyproject.toml
collector/certs/: generate_ca.sh
collector/config/: collector.yaml  nodes.yaml
collector/sentrix_collector/: __init__.py  __main__.py  forensics.py  logging.py  models.py  server.py
collector/tests/: conftest.py  test_models.py  test_server.py
collector/vestrix_collector/: __init__.py  __main__.py  config.py  forensics.py  server.py
dataset/: README.md
docs/: GETTING_STARTED.md  NON-GOALS.md  NON_GOALS.md  RESEARCH.md  ROADMAP.md  architecture.md  standards-alignment.md  threat-model.md
firmware/: README.md
forensics/: CHAIN_FORMAT.md  README.md  __init__.py  _format.py  _store.py  anchor.py  chain_check.py  keys.py  logger.py  pyproject.toml
forensics/tests/: __init__.py  conftest.py  test_forensics.py
ml/: README.md
ml/benchmarks/: BENCHMARKS.md
pipeline/: README.md
soc-integration/: SCHEMA.md  pyproject.toml
soc-integration/ocsf/: README.md  __init__.py  mapper.py
soc-integration/tests/: test_mapper.py
soc-integration/wazuh/: README.md  docker-compose.yml
soc-integration/wazuh/decoders/: local_decoder.xml
soc-integration/wazuh/rules/: local_rules.xml
soc-integration/wazuh/sample_events/: README.md  borderline_intrusion.json  high_confidence_intrusion.json  intrusion_without_badge.json  logtest_output.txt  low_confidence_intrusion.json  normal_benign.json  sensor_tamper.json
verifier-cli/: Cargo.toml  README.md
verifier-cli/src/: anchor.rs  canonical.rs  chain.rs  lib.rs  main.rs
verifier-cli/tests/: chain_integration.rs
