[package]
name = "sentrix-verifier-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Independent verifier for Sentrix forensic hash chains"
publish = false

[[bin]]
name = "sentrix-verify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2.2"
ryu = "1.0"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
